# bsc-screni

./: .gitignore  compare_with_r.py  container_pixi.def  pixi.toml  pyproject.toml  readme.md
data/: data_info.md
docs/: processing_pipeline.md  project_description.md  seaad_integration_history.md  seaad_quickstart.md  using_containers.md
scripts/: check_moods_in_container.sh  check_seaad_atac_counts.py  explore_seaad_spatial.py  inspect_seaad_integration.py  inspect_seaad_spatial.py  prep_seaad_sq1.py  run_paper_phase3.R  run_seaad_hvg_selection.py  run_seaad_inference.py  run_seaad_paired_phase2.py  subsample_seaad_paired.py  validate_phase3_outputs.py
slurm/: download_pbmc.sh  download_reference.sh  download_retinal.sh  download_seaad.sh  inspect_data.sh  run_check_seaad_atac_counts.sh  run_feature_select.sh  run_gene_peak.sh  run_inspect_seaad_integration.sh  run_integrate_pbmc.sh  run_integrate_retinal.sh  run_integrate_seaad.sh  run_load_seaad.sh  run_notebook.sh  run_processing.sh  run_seaad_hvg_selection.sh  run_seaad_inference.sh  run_seaad_paired_phase2.sh  run_subsample_seaad_paired.sh
src/: inspect_data.py  plot_integration.py  plot_pbmc_umap.py
src/screni/: __init__.py  example_load.ipynb  seaad_paired_diagnostics.ipynb
src/screni/data/: __init__.py  calculate_scNetwork_degree.py  calculate_scnetwork_precision_recall.py  clustering.py  clustering_k_means.py  differential.py  feature_selection.py  gene_peak_relations.py  identify_enriched_scregulators.py  inference.py  integration.py  integration_retinal.py  integration_seaad.py  loading.py  loading_paper.py  loading_seaad.py  network_analysis.py  prep_seaad_sq1.ipynb  reconstruct_network.py  run_infer_wscreni.ipynb  utils.py
tests/: test_differential.py  test_loading_seaad_extensions.py  test_precision_recall_correctness.py  test_precision_recall_parity.py
